@@ -116,6 +116,7 @@
     <Compile Include="src\com\robotacid\ui\menu\LoreMenuList.cs" />
     <Compile Include="src\com\robotacid\ui\menu\InventoryMenuList.cs" />
     <Compile Include="src\com\robotacid\ui\Transition.cs" />
+    <Compile Include="src\com\robotacid\level\Surface.cs" />
   </ItemGroup>
   <ItemGroup>
     <ShaderProgram Include="shaders\Simple.fcg" />
