@@ -1,3 +1,8 @@
+2013-10-03  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	Surface.csを追加
+
 2013-10-02  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
